cluster/core/networking/internal-gateway/resources/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: internal-gateway
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.3.52
    ports:
      - name: http
        port: 80
      - name: https
        port: 443
