cluster/core/networking/internal-gateway/resources/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: internal-gateway
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.3.11
      - ip: 192.168.3.12
      - ip: 192.168.3.13
    ports:
      - name: gateway
        port: 9443
        protocol: TCP
