cluster/core/networking/internal-gateway/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-gateway
  namespace: networking
spec:
  clusterIP: 10.69.69.69
  ipFamilyPolicy: SingleStack
  ports:
    - name: gateway
      port: 443
      protocol: TCP
      targetPort: 9443
  type: ClusterIP
