cluster/core/networking/internal-gateway/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-production
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.3.52
  listeners:
    - hostname: "*.btkostner.network"
      name: btkostner-network
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: btkostner-network
