cluster/core/networking/internal-gateway/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  namespace: networking
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: internal-gateway
      port:
        name: gateway
  tls:
    - hosts:
        - "*.btkostner.network"
      secretName: btkostner-network
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: internal-gateway
                port:
                  number: 443
